updated deal ticket and transaction form

--- a/transactions/templates/transactions/transactions_form.html
+++ b/transactions/templates/transactions/transactions_form.html
@@ -101,9 +101,11 @@
                                                 {% endfor %}
                                             </select>
                                         </div>
-                                        <div class="col" id="settlement_currency_div">
-                                            <label for="settlement_currency_rate">Settlement Currency Rate * </label>
-                                            <input type="text" value="{{ formdata.settlement_currency_rate }}" id="settlement_currency_rate" class="form-control" name="settlement_currency_rate" onkeyup="calcSettlemetAmount();" onchange="calcSettlemetAmount();" required />
+                                        <div class="col">
+                                            <div id="settlement_currency_div">
+                                                <label for="settlement_currency_rate">Settlement Currency Rate * </label>
+                                                <input type="text" value="{{ formdata.settlement_currency_rate }}" id="settlement_currency_rate" class="form-control" name="settlement_currency_rate" onkeyup="calcSettlemetAmount();" onchange="calcSettlemetAmount();" required />
+                                            </div>
                                         </div>
                                         <div class="col">
                                             <label for="settlement_amount">Settlement Amount * </label>
@@ -126,30 +128,36 @@
                                             </select>
                                         </div>
                                     </div>
+                                </fieldset>
+                                <fieldset class="border my-2 px-2">
+                                    <legend class="w-auto px-2"><small>Payment Instructions</small></legend>
                                     <div class="row mb-2">
-                                        <div class="col-8 g-1">
-                                            <label for="in_payment">Inbound Payment Instructions </label>
-                                            <div class="input-group">
-                                                <select name="in_payment" id="in_payment" class="form-control" onchange="check_for_fd(this, 'fixed_deposit_cert');">
-                                                    <option value="cash"{% if formdata.cash_settlement %} selected {% endif %}>Cash Settlement</option>
-                                                    <option value="fixed"{% if formdata.fixed_deposit %} selected {% endif %}>Fixed Deposit</option>
-                                                    {% for beneficiary in beneficiaries %}
-                                                    <option value="bb-{{ beneficiary.id }}"{% if beneficiary.id == formdata.beneficiary.id %} selected {% endif %}>{{ beneficiary }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                                <div class="input-group-append">
-                                                    <a class="btn btn-primary-outline p-2" href="{% if client.client_type == 'I' %}{% url 'clients:new_i_beneficiary' client.id %}{% else %}{% url 'clients:new_c_beneficiary' client.id %}{% endif %}" role="button"><i class="fa fa-plus"></i> New Beneficary</a>
-                                                </div>
-                                            </div>
+                                        <div class="col-6 g-1">
+                                            <label for="in_payment_type">Inbound Payment</label>
+                                            <select name="in_payment_type" id="in_payment_type" class="form-control" onchange="check_inpayment();">
+                                                {% for inpayment_type in inpayment_types %}
+                                                <option value="{{ inpayment_type.0 }}"{% if inpayment_type.0 == formdata.inpayment_type.id %} selected {% endif %}>{{ inpayment_type.1 }}</option>
+                                                {% endfor %}
+                                            </select>
                                         </div>
-                                        <div class="col-4" id="fixed_deposit_cert_div">
-                                            <label for="fixed_deposit_cert">Fixed Deposit Certificate Number</label>
-                                            <input type="text" value="{{ formdata.fixed_deposit_cert }}" class="form-control" name="fixed_deposit_cert" id="fixed_deposit_cert" />
+                                        <div class="col-6 g-1">
+                                            <div id="check_div">
+                                                <label for="check_number">Check Number</label>
+                                                <input type="text" value="{{ formdata.check_number|default_if_none:"" }}" class="form-control" name="check_number" id="check_number" />
+                                            </div>
+                                            <div id="dfl_bank_div">
+                                                <label for="dfl_bank_account">DFL Bank Account</label>
+                                                <select name="dfl_bank_account" id="dfl_bank_account" class="form-control">
+                                                    {% for dfl_bank in dfl_banks %}
+                                                    <option value="{{ dfl_bank.id }}"{% if dfl_bank.id == formdata.dfl_bank_account.id %} selected {% endif %}>{{ dfl_bank }}</option>    
+                                                    {% endfor %}    
+                                                </select>    
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="row mb-2">
                                         <div class="col-8 g-1">
-                                            <label for="out_payment">Outbound Payment Instructions </label>
+                                            <label for="out_payment">Outbound Payment</label>
                                             <div class="input-group">
                                                 <select name="out_payment" id="out_payment" class="form-control" onchange="check_for_fd(this, 'fixed_deposit_cert');">
                                                     <option value="cash"{% if formdata.cash_settlement %} selected {% endif %}>Cash Settlement</option>
@@ -165,7 +173,7 @@
                                         </div>
                                         <div class="col-4" id="fixed_deposit_cert_div">
                                             <label for="fixed_deposit_cert">Fixed Deposit Certificate Number</label>
-                                            <input type="text" value="{{ formdata.fixed_deposit_cert }}" class="form-control" name="fixed_deposit_cert" id="fixed_deposit_cert" />
+                                            <input type="text" value="{{ formdata.fixed_deposit_cert|default_if_none:"" }}" class="form-control" name="fixed_deposit_cert" id="fixed_deposit_cert" />
                                         </div>
                                     </div>
                                     <!--
